Changes 0.9.6.10 -> 0.9.6.11
 * Handle 3GPP mismatch between announced applications in CER/CEA and actual
   messages.

Changes 0.9.6.9 -> 0.9.6.10
 * Allow bogus PRNG when initializing DWR jitter
 * Eliminate (harmless) race condition when shutting down under high load
   leading to "WARNING: Got a DPA. This is not expected"
 * Mismatch between relative and absolute timeouts in request times. (should
   be relative)

Changes 0.9.6.8 -> 0.9.6.9
 * Fixed IllegalMonitorStateException when shutting down

Changes 0.9.6.7 -> 0.9.6.8
 * Added timeout capability to SimpleSyncClient and NodeManager
 * Logs destination IP address before initiating outgoing connections
 * Prevent double-start of stack (would lead to erratic behaviour)
 * Support TCP source port range

Changes 0.9.6.6 -> 0.9.6.7
* Expanded CC example server
* Fixed npe on outgoing sctp connections that fail
* Support replaced logger implementation, eg. in resin and other application
  servers.

Changes 0.9.6.5 -> 0.9.6.6
* AVP_Time.queryDate() returned wrong values de to 32-bit arithmic.

Changes 0.9.6.4 -> 0.9.6.5
* NodeManager could not find matching oustanding requests if the state object
  was null.
* Node.waitForConnectionTimeout() and NodeManager.waitForConnectionTimeout()
  methods added.
* Handle more than 2^31 sessions connectly when generating Session-IDs
* Support some unusual vendor-specific-application-id AVP formats.
* AVP_Time.queryDate() returned wrong value (Date object creation with seconds
  instead of milliseconds)
* AVP.queryPayload() made public.

Changes 0.9.6.3 -> 0.9.6.4
* Fix regression in 0.9.6.3:
  - ConcurrentModificationException when talking to silent peer
  - Bugfix when connect() connects imediately. (solaris)
  Both regressions were due to my fat fingers and subversion happily
  accepting changes to tags.

Changes 0.9.6.? -> 0.9.6.3
* Made more robust when calling Node.findConnection/sendMessage/... when the
  node has not been started.

Changes 0.9.6.1 -> 0.9.6.2